add notes to bottom of notebook

--- a/xarray-intro/xarray-intro.ipynb
+++ b/xarray-intro/xarray-intro.ipynb
@@ -2777,6 +2777,17 @@
     "\n",
     "The [`xarray` documentation](http://xarray.pydata.org/en/stable/index.html) is really great!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "\n",
+    "__Author__: Kyle Foreman (kfor@uw.edu)\n",
+    "\n",
+    "__Originally presented:__ 13 October 2017"
+   ]
   }
  ],
  "metadata": {
