--- a/rmarkdown-intro/word_number_plugging.Rmd
+++ b/rmarkdown-intro/word_number_plugging.Rmd
@@ -3,11 +3,11 @@ title: "Example Number Plugging"
 author: "Grant Nguyen"
 date: "10/20/2017"
 output:
-  pdf_document:
-    fig_caption: yes
+  html_document: null
   word_document:
     fig_caption: yes
-  html_document: null
+  pdf_document:
+    fig_caption: yes
 always_allow_html: yes
 ---
 
@@ -19,7 +19,7 @@ library(shiny)
 library(plotly)
 library(formattable)
 library(DT)
-
+library(sparkline)
 
 ## Pull GBD2015 global cycling deaths
 # data <- get_outputs(topic = "cause", gbd_round_id = 3, location_id = "lvl3", year_id = c(1990, 1995, 2000, 2005, 2010, 2015), sex_id = c(1,2), cause_id = 691, metric_id = c(1,3))
@@ -27,11 +27,12 @@ library(DT)
 data <- readRDS("input_data/rmarkdown_data.rds")
 
 ## Format numbers to uncertainty intervals, without rounding to a digit
-format_num <- function(x) format(round(x, 0), decimal.mark = ".", big.mark = ",")
+## The gsub is used because format adds spaces in front of character values so that all output takes up the same digits. We don't want this.
+format_num <- function(x) return(gsub(" ", "", format(round(x, 0), decimal.mark = ".", big.mark = ",")))
 data[metric_name == "Number", ui_val := paste0(format_num(val), " (", format_num(lower), ", ", format_num(upper), ")")]
 
 ## Convert rate to rate per 100,000, display to three rounded digits
-format_rate <- function(x) format(round(x * 100000, 3), decimal.mark = ".", big.mark = ",")
+format_rate <- function(x) return(gsub(" ", "", format(round(x * 100000, 3), decimal.mark = ".", big.mark = ",")))
 data[metric_name == "Rate", ui_val := paste0(format_rate(val), " (", format_rate(lower), ", ", format_rate(upper), ")")]
 ```
 
@@ -114,37 +115,11 @@ And here is the PNG (sourced directly from the PNG file)
 
 ![Male Death Rate: 2010 Cycling Road Injuries](input_data/male_death_rate.png)
 
-You can also use packages to make your output #fancy. This table uses the sparkline package to add sparklines to the table.
+## LaTeX
 
-```{r chn_death_formattable, echo = FALSE}
-## Reshape to wide by deaths, and add sparklines
-wide_data <- data[metric_name == "Number" & sex == "Male", list(year_id, location_name, val)]
-wide_data[, year := as.character(paste0("Deaths ", year_id))]
-wide_data[, year_id := NULL]
-wide_data <- dcast(wide_data, location_name ~ year, value.var = "val")
+LaTeX is fairly straightforward \[ distance = \frac{n_{match}}{n_{admit}+n_{discharge}-n_{match}} \]
 
-## Create a comma-separated list of numbers, which will be fed into the sparkline
-wide_data[, `Year Trend` := paste(`Deaths 1990`, `Deaths 1995`, `Deaths 2000`, `Deaths 2005`, `Deaths 2010`, `Deaths 2015`, sep = ",")]
-
-setnames(wide_data, "location_name", "Country")
-
-## Decide which column to feed to the sparkline data object called sparkSeries
-col_defs <- list(list(targets = 7, render = JS("function(data, type, full){ return '<span class=spark>' + data + '</span>' }")))
-
-## Decide how to format the sparkline display -- width in pixels
-line_string <- "width:100, type: 'line', lineColor: 'black', fillColor: '#ccc', highlightLineColor: 'orange', highlightSpotColor: 'orange'"
-
-## Create a sparkline based on the sparkSeries data object
-myspark <- JS(paste0("function (oSettings, json) {\n  $('.spark:not(:has(canvas))').sparkline('html', { ", line_string, " })}"), collapse = "")
-
-d1 <- datatable(wide_data, 
-                rownames = FALSE, 
-                options = list(columnDefs = col_defs, fnDrawCallback = myspark))
-d1$dependencies <- append(d1$dependencies, htmlwidgets:::getDependency("sparkline"))
-d1
-```
-
-Latex is fairly straightforward \[ distance = \frac{n_{match}}{n_{admit}+n_{discharge}-n_{match}} \]
+## Bibliographies and Citations
 
 To add a bibliography, see <http://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html>. You simply need to add a .bib file which can be exported from Zotero or other citation managers. From there, you can use brackets to cite the source and add it to your printed citation list. 
 
